--- a/config.toml
+++ b/config.toml
@@ -47,12 +47,13 @@ link = "https://www.facebook.com/GDGToulouse"
   languageCode = "en-us"
   weight = 1
   home = "Home"
-  copyright = "[qwanturank](https://qwanturank.live/)"
+  copyright = ""
+  # copyright = "[devfesttoulouse](https://devfesttoulouse.fr/)"
 
     # navigation
-    [Languages.en.menu]
+    # [Languages.en.menu]
 
-      [[Languages.en.menu.main]]
-        weight = 2
-        name = "DevFest Toulouse 2020"
-        url = "https://devfesttoulouse.fr/"
+    #   [[Languages.en.menu.main]]
+    #     weight = 2
+    #     name = "DevFest Toulouse 2020"
+    #     url = "https://devfesttoulouse.fr/"
