--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -11,9 +11,9 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
+        uses: peaceiris/actions-hugo@v2.4.11
         with:
-          hugo-version: '0.61.0'
+          hugo-version: 'latest'
           # extended: true
       - name: Build
         run: hugo -DF --baseURL ${{ secrets.BASE_URL }}
