--- a/config.toml
+++ b/config.toml
@@ -57,3 +57,8 @@ link = "https://www.facebook.com/GDGToulouse"
     #     weight = 2
     #     name = "DevFest Toulouse 2020"
     #     url = "https://devfesttoulouse.fr/"
+
+[markup]
+  [markup.goldmark]
+    [markup.goldmark.renderer]
+      unsafe = true
