--- a/data/en/jumbo.yml
+++ b/data/en/jumbo.yml
@@ -5,10 +5,10 @@ image: 'images/banner.jpg'
 announcement: >
   <h3>Dear attendees, speakers, sponsors & supporters,</h3>
   <br/>
-  <p>It is with a heavy heart that **we are forced to cancel DevFest Toulouse 2020**.</p>
+  <p>It is with a heavy heart that <b>we are forced to cancel DevFest Toulouse 2020</b>.</p>
   <p>Indeed our goal with DevFest Toulouse has always been to create a unique atmosphere to meet the community, learn from the best and share knowledge.</p>
   <p>The Covid19 pandemic has stopped us from doing so. As of now we still have a lot of unanswered questions, and we feel that as volunteers, the  remaining time until November is too short to organize a good edition. That's the reason why today we renounce.</p>
-  <p>That being said, be sure that **we are actively working for the 2021 edition**!</p>
+  <p>That being said, be sure that <b>we are actively working for the 2021 edition</b>!</p>
   <p>Take care of you,<br/>
   the DevFest Toulouse team</p>
 
