--- a/data/en/jumbo.yml
+++ b/data/en/jumbo.yml
@@ -9,7 +9,7 @@ announcement: >
   <p>Indeed our goal with DevFest Toulouse has always been to create a unique atmosphere to meet the community, learn from the best and share knowledge.</p>
   <p>The Covid19 pandemic has stopped us from doing so. As of now we still have a lot of unanswered questions, and we feel that as volunteers, the  remaining time until November is too short to organize a good edition. That's the reason why today we renounce.</p>
   <p>That being said, be sure that <b>we are actively working for the 2021 edition</b>!</p>
-  <p>Take care of you,<br/>
+  <p>Take care,<br/>
   the DevFest Toulouse team</p>
 
 # buttons:
